# bittorent-rust

./: Cargo.toml  TODO.md
src/: bencode.rs  main.rs  torrent.rs
src/bencode/: core.rs  deser.rs  error.rs  mod.rs
src/bencode/serde/: de.rs  mod.rs  ser.rs
src/torrent/: meta.rs  mod.rs  network.rs
