[package]
name = "bittoren-rust"
description = "Simple implementation of bittorennt client from scratch"
version = "0.1.0"
edition = "2021"
authors = ["Nikolai Golub <nikolay.v.golub@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0" }
sha1 = "0.10.6"
serde_bytes = "0.11.17"
reqwest = { version = "0.12.15", features = ["blocking"] }
percent-encoding = "2.3.1"

[dev-dependencies]
proptest = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
hex = { version = "0.4.3" }